Add correct link to new project button

--- a/projectpicker.html
+++ b/projectpicker.html
@@ -37,7 +37,7 @@
                             <div class="options">
                                 <a class="btn btn-default btn-block" href="index.html">Projekt öffnen</a>
                                 <a class="btn btn-default btn-block" href="index.html">Aus Versionskontrollsystem auschecken</a>
-                                <a id="new project" class="btn btn-success btn-block" href="index.html" role="button">Neues Projekt</a>
+                                <a id="new project" class="btn btn-success btn-block" href="modelbrowser.html" role="button">Neues Projekt</a>
                             </div>             
                     </div>
                 </div>
