Fix split panel dependency.

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 
         <!-- Specific Libs: fileTree, panels, ... -->
         <script src="vendor/jquery.mjs.nestedSortable.js"></script>
-        <script src="https://unpkg.com/split.js/split.min.js"></script>
+        <script src="https://unpkg.com/split.js@1.6.2/dist/split.min.js"></script>
         <script src="vendor/jstree/jstree.min.js"></script>
         <script src="vendor/lobipanel/js/lobipanel.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@1.5.4/src/loadingoverlay.min.js"></script>
